Stop page from jumping around

--- a/src/_less/main.less
+++ b/src/_less/main.less
@@ -39,5 +39,6 @@ body {
 
 #song-progress {
   grid-area: p;
+  height: 18px;
 }
 
